--- a/.env
+++ b/.env
@@ -15,13 +15,13 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=a57afebab2153e28e15f47b89e763ef1
+APP_SECRET=e4c7245cedd9a3a89e43b66a42ec37d2
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -29,5 +29,5 @@ APP_SECRET=a57afebab2153e28e15f47b89e763ef1
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://root:@127.0.0.1:3306/master?serverVersion=mariadb-10.5.5
 ###< doctrine/doctrine-bundle ###
